Check return from PlatformInit, and return if it failed.

Bug 43347

This was a patch submitted, I have reviewed it (r=rayw)
it provides a softer landing when problems occur in the
initialization.  There is no difference in behavior if
the initialization was successful.